<resources>
    <string name="app_name">BaseDeDatos</string>

    <string name="txt_codigo">Codigo del producto</string>
    <string name="txt_descripcion">descripción del producto </string>
    <string name="txt_precio">precio del producto</string>

    <string name="BotonRegistar">Resgistar Producto</string>
    <string name="BotonBuscar">Buscar Producto</string>
    <string name="BotonEliminar">Eliminar Producto</string>
    <string name="BotonModificar">Modificar Producto</string>





</resources>
